--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,5 @@ django>=1.8
 django-registration-redux==1.6
 django-phonenumber-field==1.1
 djangorestframework==3.6.3
+django-money==0.11.2
+django-bootstrap3==8.2.3
